Started fixing breadcrumb overflow

--- a/css/main.scss
+++ b/css/main.scss
@@ -202,7 +202,6 @@ nav ul li a {
     max-width: 100vw;
     white-space: nowrap;
     overflow-y: hidden;
-    overflow-x: scroll;
     -webkit-overflow-scrolling: touch;
 }
 
@@ -220,9 +219,19 @@ nav ul li a {
     padding: 0 20px;
 }
 
+#breadcrumbs ul li:hover {
+    background-color: #666;
+    background-color: rgba(102, 102, 102, 0.4);
+}
+
 #breadcrumbs ul li.active {
     background-color: #555;
     background-color: rgba(85, 85, 85, 0.4);
+}
+
+#breadcrumbs ul li.active:hover {
+    background-color: #666;
+    background-color: rgba(102, 102, 102, 0.4);
 }
 
 #breadcrumbs ul li a {
@@ -827,6 +836,11 @@ nav.loading ul li {
         border-top-right-radius: $body-border-radius;
     }
  
+    #breadcrumbs {
+        white-space: normal;
+        overflow-y: auto;
+    }
+
     footer {
         margin-bottom: 50px;
         border-bottom-left-radius: $body-border-radius;
